# funlang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.f  example.fun  grammar.txt  simple-grammar.txt
etc/: example.fun  grammar.txt
examples/: arithmetic.ff  arrays.ff  badtype.ff  default_init.ff  factorial.ff  fib.ff  if.ff  let_assign.ff  lvalue_expected.ff  lvalues.ff  numbers.ff  quicksort.ff  scopes.ff  test.ff  unexpected_token1.ff
examples/gold/: fib.ll
include/: ast_nodes.h  ast_printer.h  codegen.h  lex.h  parse.h  program_ast.h  token.h  util.h
src/: ast_nodes.cpp  ast_printer.cpp  codegen.cpp  driver.cpp  parse.cpp  program_ast.cpp  test.cpp  token.cpp
